fix: modals visibility when button is not clicked

--- a/app/styles/Menu.module.css
+++ b/app/styles/Menu.module.css
@@ -159,3 +159,36 @@
     font-size: 18px;
     text-align: left;
 }
+
+.modal {
+    width: 750px;
+    height: 250px;
+    border: none;
+    outline: none;
+}
+
+.modalWrapper {
+    display: flex;
+}
+
+.modalImage img {
+    width: 100%;
+    height: 250px;
+    object-fit: contain;
+}
+
+.modalContent {
+    padding: 1rem;
+    text-align: left;
+}
+
+.closeButton {
+    position: absolute;
+    top: 80%;
+    right: 50px;
+    border: none;
+    background-color: transparent;
+    font-family: inherit;
+    font-size: 16px;
+    cursor: pointer;
+}
